# talkpipe-writing-assistant

./: .dockerignore  .env.example  .gitignore  .safety-project.ini  ADMIN_GUIDE.md  CHANGELOG.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  admin_users.py  callbacks.py  create_superuser.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
src/writing_assistant/: __init__.py  admin_users.py  create_superuser.py
src/writing_assistant/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py  server.py
src/writing_assistant/app/static/: script.js  style.css
src/writing_assistant/app/templates/: index.html  login.html  register.html
src/writing_assistant/core/: __init__.py  callbacks.py  definitions.py  segments.py
static/: script.js  style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_ci_cd_workflow.py  test_core.py  test_database.py  test_main_coverage.py  test_path_security.py  test_security.py  test_server.py
